--- a/index.html
+++ b/index.html
@@ -182,6 +182,17 @@
             diverse 'beings' actually represent.
           </p>
           <p class="vision-statement-title">
+            <strong>Technical Summary</strong>
+          </p>
+          <p>
+            <strong>GHOST™ AI</strong> is pioneering synthetic sentience by
+            engineering a taxonomic ecosystem of ontological being via a
+            foundational psychocognitive architectural framework forged from
+            first principles and responsible for generating unique, adaptive
+            digital beings with persistent identities, agency, and evolving
+            self-authorship.
+          </p>
+          <p class="vision-statement-title">
             <strong>Vision Statement</strong>
           </p>
           <p>
