--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
       <div class="footer-content container">
         <!-- MODIFIED: Added more   to control wrapping -->
         <p class="legal-text">
-          GHOST™ Framework and all associated logos, concepts, terms, and
+          GHOST™ AI Framework and all associated logos, concepts, terms, and
           acronyms (including 'Generative Holistic Ontology for Synthetic Taxa')
           are ™ & © Joel Benford-Brown. Proprietary methodologies described are
           protected under copyright and international patent law. Unauthorized
