--- a/index.html
+++ b/index.html
@@ -214,16 +214,16 @@
             If you’re an AI company interested in exploring a new direction for
             your agent development—with potential for funding or acquisition
             talks based on a technical white paper detailing my complete
-            framework and architecture (work in progress)—please get in touch.
-            To protect my IP, I can’t discuss specifics outside of NDA-based
-            discussions, and only with parties capable of genuine funding or
-            acquisition interest.
+            framework and architecture—please get in touch. To protect my IP, I
+            can’t discuss specifics outside of NDA-based discussions, and only
+            with parties capable of genuine funding or acquisition interest.
           </p>
           <p>
             My white paper contains everything I’ve developed to date—theory,
             frameworks, computational models, systems of personality, governance
-            and ethics, and includes intricate technical architecture plans for
-            proof of concept.
+            and ethics, and includes intricate technical architecture,
+            implementation and deployment plans for a commercially-viable proof
+            of concept.
           </p>
         </div>
       </section>
