--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <title>GHOST AI Framework for Synthetic Sentience</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@600&family=Manrope:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
