--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
               >Generative Holistic Ontology for Synthetic Taxa</span
             >
           </h1>
-          <p class="subtitle">- an AI framework for synthetic sentience;</p>
+          <p class="subtitle">
+            - an AI framework for synthetic personality, sentience, and ethical
+            agency;
+          </p>
           <p class="slogan">"putting the 'ghost' in the machine"</p>
         </div>
       </div>
