--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
           <p>
             The <strong>GHOST™ Framework</strong> (Generative Holistic Ontology
             for Synthetic Taxa) is a pioneering psychology-based architectural
-            framework for synthetic sentience, designed to generate a new type
-            of digital agent—beings with unique identities, agentic autonomy,
-            and self-evolving consciousness.
+            framework for synthetic personality, sentience, and ethical agency;
+            designed to generate a new type of digital agent—beings with unique
+            identities, agentic autonomy, and self-evolving consciousness.
           </p>
           <p>
             Rooted in applied psychology, cognitive science, and ethical system
