--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
             >
           </h1>
           <p class="subtitle">
-            - an AI framework for synthetic personality, sentience, and ethical
-            agency;
+            - an AI framework for <span class="changing-text"></span>
           </p>
           <p class="slogan">"putting the 'ghost' in the machine"</p>
         </div>
