--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <title>GHOST AI Framework for Synthetic Sentience</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@600&family=Manrope:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -96,9 +96,8 @@
               >Generative Holistic Ontology for Synthetic Taxa</span
             >
           </h1>
-          <p class="subtitle">
-            - an AI framework for <span class="changing-text"></span>
-          </p>
+          <h1 class="hero-text">an AI framework for:</h1>
+          <h1 class="hero-text">< <span class="changing-text"></span> ></h1>
           <p class="slogan">"putting the 'ghost' in the machine"</p>
         </div>
       </div>
