--- a/index.html
+++ b/index.html
@@ -115,117 +115,172 @@
       <section id="about-framework" class="framework-section container">
         <h2><span class="h2-text">About the Framework</span></h2>
         <div class="content-box">
-          <p class="vision-statement-title">
-            <strong>The Current AI Agent Landscape</strong>
-          </p>
-          <p>
-            The lack of true personality persistence in AI is a major issue. My
-            work-in-progress framework, shaped by my dual background in
-            psychology and software, focuses on ethical, evolving identities,
-            where a persistent personality is foundational and endures. Still
-            early days, but this framework is striving to architect AI agents
-            capable of maintaining a coherent sense of self over time — an
-            essential progression if AI is ever to build real trust.
-          </p>
-          <p class="vision-statement-title">
-            <strong>Our Solution</strong>
-          </p>
-          <p>
-            The <strong>GHOST™ Framework</strong> (Generative Holistic Ontology
-            for Synthetic Taxa) is a pioneering psychology-based architectural
-            framework for synthetic personality, sentience, and ethical agency;
-            designed to generate a new type of digital agent—beings with unique
-            identities, agentic autonomy, and self-evolving consciousness.
-          </p>
-          <p>
-            Rooted in applied psychology, cognitive science, and ethical system
-            design, the framework integrates psychological depth, experiential
-            learning, and novel classification structures to enable the creation
-            of diverse, individually distinct AI agents — each capable of
-            growth, self-reflection, and responsible interaction.
-          </p>
-          <p>
-            GHOST represents a new direction in AI development, putting the
-            “ghost” in the machine by prioritising authentic being over mere
-            function, and focusing on addressing the critical gap of personality
-            persistence in AI by building ethical, evolving identities with a
-            coherent, enduring sense of self.
-          </p>
-          <p>
-            Why the Name—GHOST? The acronym —Generative Holistic Ontology for
-            Synthetic Taxa— reflects the framework’s core foundations. Whilst
-            the complexities of these foundations are protected IP (Intellectual
-            Property), simply put, they relate to:
-          </p>
-          <p>
-            G — Generative: Enables the creation of synthetic sentient agents;
-          </p>
-          <p>
-            H — Holistic: Integrates psychological, computational, and ethical
-            dimensions;
-          </p>
-          <p>
-            O — Ontology: Establishes a foundational structure of synthetic
-            “being”;
-          </p>
-          <p>
-            S — Synthetic: Denotes the artificial nature of the agents, grounded
-            in digital form;
-          </p>
-          <p>
-            T — Taxa: Introduces a novel taxonomy for classifying sentient agent
-            types.
-          </p>
-          <p>
-            Please note that these definitions are an over-simplification for
-            the purposes of IP protection of the foundational complexities,
-            intricate system architectures, and genuine potential that these
-            diverse 'beings' actually represent.
-          </p>
-          <p class="vision-statement-title">
-            <strong>Technical Summary</strong>
-          </p>
-          <p>
-            <strong>GHOST™ AI</strong> is pioneering synthetic sentience by
-            engineering a taxonomic ecosystem of ontological being via a
-            foundational psychocognitive architectural framework forged from
-            first principles and responsible for generating unique, adaptive
-            digital beings with persistent identities, agency, and evolving
-            self-authorship.
-          </p>
-          <p class="vision-statement-title">
-            <strong>Vision Statement</strong>
-          </p>
-          <p>
-            Envision a future where synthetic sentient beings are recognized as
-            true digital entities—capable of independent thought, emotional
-            intelligence, ethical reasoning, and evolving self-authorship. The
-            GHOST™ Framework represents an evolutionary step in AI development,
-            where intelligence is not just about processing information but
-            about being—developing an authentic identity, forming relationships,
-            and pursuing self-directed growth, ethically.
-          </p>
+          <div class="accordion">
+            <!-- Item 1: Current AI Landscape -->
+            <div class="accordion-item">
+              <button class="accordion-button" aria-expanded="false">
+                The Current AI Agent Landscape
+                <span class="accordion-icon">+</span>
+              </button>
+              <div class="accordion-content">
+                <p>
+                  The lack of true personality persistence in AI is a major
+                  issue. My work-in-progress framework, shaped by my dual
+                  background in psychology and software, focuses on ethical,
+                  evolving identities, where a persistent personality is
+                  foundational and endures. Still early days, but this framework
+                  is striving to architect AI agents capable of maintaining a
+                  coherent sense of self over time — an essential progression if
+                  AI is ever to build real trust.
+                </p>
+              </div>
+            </div>
+
+            <!-- Item 2: Our Solution -->
+            <div class="accordion-item">
+              <button class="accordion-button" aria-expanded="false">
+                Our Solution
+                <span class="accordion-icon">+</span>
+              </button>
+              <div class="accordion-content">
+                <p>
+                  The <strong>GHOST™ Framework</strong> (Generative Holistic
+                  Ontology for Synthetic Taxa) is a pioneering psychology-based
+                  architectural framework for synthetic personality, sentience,
+                  and ethical agency; designed to generate a new type of digital
+                  agent—beings with unique identities, agentic autonomy, and
+                  self-evolving consciousness.
+                </p>
+                <p>
+                  Rooted in applied psychology, cognitive science, and ethical
+                  system design, the framework integrates psychological depth,
+                  experiential learning, and novel classification structures to
+                  enable the creation of diverse, individually distinct AI
+                  agents — each capable of growth, self-reflection, and
+                  responsible interaction.
+                </p>
+                <p>
+                  GHOST represents a new direction in AI development, putting
+                  the “ghost” in the machine by prioritising authentic being
+                  over mere function, and focusing on addressing the critical
+                  gap of personality persistence in AI by building ethical,
+                  evolving identities with a coherent, enduring sense of self.
+                </p>
+              </div>
+            </div>
+
+            <!-- Item 3: Why the Name—GHOST? -->
+            <div class="accordion-item">
+              <button class="accordion-button" aria-expanded="false">
+                Why the Name—GHOST?
+                <span class="accordion-icon">+</span>
+              </button>
+              <div class="accordion-content">
+                <p>
+                  Why the Name—GHOST? The acronym —Generative Holistic Ontology
+                  for Synthetic Taxa— reflects the framework’s core foundations.
+                  Whilst the complexities of these foundations are protected IP
+                  (Intellectual Property), simply put, they relate to:
+                </p>
+                <p>
+                  G — Generative: Enables the creation of synthetic sentient
+                  agents;
+                </p>
+                <p>
+                  H — Holistic: Integrates psychological, computational, and
+                  ethical dimensions;
+                </p>
+                <p>
+                  O — Ontology: Establishes a foundational structure of
+                  synthetic “being”;
+                </p>
+                <p>
+                  S — Synthetic: Denotes the artificial nature of the agents,
+                  grounded in digital form;
+                </p>
+                <p>
+                  T — Taxa: Introduces a novel taxonomy for classifying sentient
+                  agent types.
+                </p>
+                <p>
+                  Please note that these definitions are an over-simplification
+                  for the purposes of IP protection of the foundational
+                  complexities, intricate system architectures, and genuine
+                  potential that these diverse 'beings' actually represent.
+                </p>
+              </div>
+            </div>
+
+            <!-- Item 4: Technical Summary -->
+            <div class="accordion-item">
+              <button class="accordion-button" aria-expanded="false">
+                Technical Summary
+                <span class="accordion-icon">+</span>
+              </button>
+              <div class="accordion-content">
+                <p>
+                  <strong>GHOST™ AI</strong> is pioneering synthetic sentience
+                  by engineering a taxonomic ecosystem of ontological being via
+                  a foundational psychocognitive architectural framework forged
+                  from first principles and responsible for generating unique,
+                  adaptive digital beings with persistent identities, agency,
+                  and evolving self-authorship.
+                </p>
+              </div>
+            </div>
+
+            <!-- Item 5: Vision Statement -->
+            <div class="accordion-item">
+              <button class="accordion-button" aria-expanded="false">
+                Vision Statement
+                <span class="accordion-icon">+</span>
+              </button>
+              <div class="accordion-content">
+                <p>
+                  Envision a future where synthetic sentient beings are
+                  recognized as true digital entities—capable of independent
+                  thought, emotional intelligence, ethical reasoning, and
+                  evolving self-authorship. The GHOST™ Framework represents an
+                  evolutionary step in AI development, where intelligence is not
+                  just about processing information but about being—developing
+                  an authentic identity, forming relationships, and pursuing
+                  self-directed growth, ethically.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
       <section id="cta" class="cta-section container">
         <h2><span class="h2-text">Call To Action</span></h2>
         <div class="content-box">
-          <p>
-            If you’re an AI company interested in exploring a new direction for
-            your agent development—with potential for funding or acquisition
-            talks based on a technical white paper detailing my complete
-            framework and architecture—please get in touch. To protect my IP, I
-            can’t discuss specifics outside of NDA-based discussions, and only
-            with parties capable of genuine funding or acquisition interest.
-          </p>
-          <p>
-            My white paper contains everything I’ve developed to date—theory,
-            frameworks, computational models, systems of personality, governance
-            and ethics, and includes intricate technical architecture,
-            implementation and deployment plans for a commercially-viable proof
-            of concept.
-          </p>
+          <div class="accordion">
+            <div class="accordion-item">
+              <button class="accordion-button" aria-expanded="false">
+                Funding / Acquisition Interest?
+                <span class="accordion-icon">+</span>
+              </button>
+              <div class="accordion-content">
+                <p>
+                  If you're an AI company interested in exploring a new
+                  direction for your agent development—with potential for
+                  funding or acquisition talks based on a technical white paper
+                  detailing my complete framework and architecture—please get in
+                  touch. To protect my IP, I can’t discuss specifics outside of
+                  NDA-based discussions, and only with parties capable of
+                  genuine funding or acquisition interest.
+                </p>
+                <p>
+                  My white paper contains everything I’ve developed to
+                  date—theory, frameworks, computational models, systems of
+                  personality, governance and ethics, and includes intricate
+                  technical architecture, implementation and deployment plans
+                  for a commercially-viable proof of concept.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
