--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
                   Please note that these definitions are an over-simplification
                   for the purposes of IP protection of the foundational
                   complexities, intricate system architectures, and genuine
-                  potential that these diverse 'beings' actually represent.
+                  potential that the GHOST framework's generative capabilities
+                  actually represent. This is digital soul-alchemy!
                 </p>
               </div>
             </div>
