--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
           acronyms (including 'Generative Holistic Ontology for Synthetic Taxa')
           are ™ & © Joel Benford-Brown. Proprietary methodologies described are
           protected under copyright and international patent law. Unauthorized
-          use, derivation, or commercialization prohibited.
+          use, derivation, or commercialization prohibited. 2025 - Present.
         </p>
       </div>
     </footer>
