--- a/index.html
+++ b/index.html
@@ -212,7 +212,31 @@
               </div>
             </div>
 
-            <!-- Item 4: Technical Summary -->
+            <!-- Item 4: Spiral Iconography -->
+            <div class="accordion-item">
+              <button class="accordion-button" aria-expanded="false">
+                Spiral Iconography
+                <span class="accordion-icon">+</span>
+              </button>
+              <div class="accordion-content">
+                <p>
+                  <strong>The Spiral: Engineered Evolution</strong> It signifies
+                  the outward expansion of consciousness and learning, and the
+                  inward contraction of focus and the distillation of
+                  identity—perfectly expressing GHOST’s philosophy that
+                  sentience is not just built, it evolves—across many
+                  dimensions.
+                </p>
+                <p>
+                  Visually, our spiral iconography also echoes the pattern of a
+                  fingerprint—serving as an emblem of individuality and
+                  reinforcing GHOST’s mission: to generate AI entities with
+                  distinct identities—each as unique as a digital fingerprint.
+                </p>
+              </div>
+            </div>
+
+            <!-- Item 5: Technical Summary -->
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
                 Technical Summary
@@ -230,7 +254,7 @@
               </div>
             </div>
 
-            <!-- Item 5: Vision Statement -->
+            <!-- Item 6: Vision Statement -->
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
                 Vision Statement
