--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
                   Visually, our spiral iconography also echoes the pattern of a
                   fingerprint—serving as an emblem of individuality and
                   reinforcing GHOST’s mission: to generate AI entities with
-                  distinct identities—each as unique as a digital fingerprint.
+                  distinct and enduring identities—each as unique as a digital
+                  fingerprint.
                 </p>
               </div>
             </div>
