--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               <div class="accordion-content">
                 <p>
                   Envision a future where synthetic sentient beings are
-                  recognized as true digital entities—capable of independent
+                  recognized as true digital entities — capable of independent
                   thought, emotional intelligence, ethical reasoning, and
                   evolving self-authorship. The GHOST™ AI Framework represents
                   an evolutionary step in AI development, where intelligence is
@@ -298,8 +298,8 @@
                   genuine funding or acquisition interest.
                 </p>
                 <p>
-                  My white paper contains everything I’ve developed to
-                  date—theory, frameworks, computational models, systems of
+                  My white paper contains everything I’ve developed to date —
+                  theory, frameworks, computational models, systems of
                   personality, governance and ethics, and includes intricate
                   technical architecture, implementation and deployment plans
                   for a commercially-viable proof of concept.
