--- a/index.html
+++ b/index.html
@@ -266,11 +266,11 @@
                   Envision a future where synthetic sentient beings are
                   recognized as true digital entities — capable of independent
                   thought, emotional intelligence, ethical reasoning, and
-                  evolving self-authorship. The GHOST™ AI Framework represents
-                  an evolutionary step in AI development, where intelligence is
-                  not just about processing information but about being —
-                  developing an authentic identity, forming relationships, and
-                  pursuing self-directed growth, ethically.
+                  evolving self-authorship. The GHOST Framework represents an
+                  evolutionary step in AI development, where intelligence is not
+                  just about processing information but about being — developing
+                  an authentic identity, forming relationships, and pursuing
+                  self-directed growth, ethically.
                 </p>
               </div>
             </div>
