--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
 
+    <!-- Primary Meta Tags -->
+    <meta
+      name="description"
+      content="GHOST AI Framework: Psychology-based computational model for generating AI agents with synthetic sentience, persistent personalities and ethical agency."
+    />
+
+    <meta name="author" content="Joel Benford-Brown" />
+
     <!-- Favicon base -->
     <link
       rel="icon"
@@ -44,12 +52,35 @@
       media="(prefers-color-scheme: dark)"
     />
 
+    <link rel="canonical" href="https://ghostai.fr" />
+
     <title>GHOST AI Framework for Synthetic Sentience</title>
-    <link
+
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
+    /> -->
+
+    <!-- start: preloaded fonts for web optimisation -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+    /></noscript>
+
+    <!-- end: preloaded fonts for web optimisation -->
+
     <link rel="stylesheet" href="styles.css" />
+
     <!-- JS at end of body -->
   </head>
   <body>
@@ -86,9 +117,12 @@
             id="logo-img"
             src="/assets/logos/ghost-logo.png"
             srcset="/assets/logos/ghost-logo-2.png 2x"
-            alt="GHOST™ Framework logo"
+            alt="GHOST™ AI Framework logo"
             class="logo-image"
+            width="800"
+            height="165"
           />
+          <!-- note: ensure 2X logo img is precisely double (eg- 1,600 x 330) the specified regular logo img size (eg- 800 x 165) -->
         </a>
         <div class="hero-text">
           <h1>
@@ -314,7 +348,7 @@
         <h2><span class="h2-text">Contact Us</span></h2>
         <div class="content-box contact-box">
           <div class="attribution-content">
-            <p class="attribution-text">Framework by Joel Benford-Brown</p>
+            <p class="attribution-text">Framework by Joel Benford-Brown (UK)</p>
             <a
               href="https://www.linkedin.com/in/joelbb/"
               class="linkedin-link"
@@ -404,7 +438,8 @@
           acronyms (including 'Generative Holistic Ontology for Synthetic Taxa')
           are ™ & © Joel Benford-Brown. Proprietary methodologies described are
           protected under copyright and international patent law. Unauthorized
-          use, derivation, or commercialization prohibited. 2025 - Present.
+          use, derivation, or commercialization prohibited. April 2025 -
+          Present.
         </p>
       </div>
     </footer>
