--- a/index.html
+++ b/index.html
@@ -347,6 +347,16 @@
       <section id="contact" class="contact-section container">
         <h2><span class="h2-text">Contact Us</span></h2>
         <div class="content-box contact-box">
+          <div class="profile-photo-container">
+            <img
+              src="/assets/images/profile-photo.png"
+              alt="Joel Benford-Brown, creator of GHOST AI Framework"
+              class="profile-photo"
+              width="600"
+              height="600"
+              loading="lazy"
+            />
+          </div>
           <div class="attribution-content">
             <p class="attribution-text">Framework by Joel Benford-Brown (UK)</p>
             <a
